--- a/Sources/Screens/Repositories/RepositoriesViewController.xib
+++ b/Sources/Screens/Repositories/RepositoriesViewController.xib
@@ -12,6 +12,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RepositoriesViewController" customModule="GitHubFeed" customModuleProvider="target">
             <connections>
+                <outlet property="collectionView" destination="JMC-LW-khf" id="T0P-wN-EbJ"/>
+                <outlet property="searchBar" destination="7h8-e1-pAa" id="uEt-rg-fnb"/>
                 <outlet property="view" destination="iN0-l3-epB" id="jQ5-mk-Od0"/>
             </connections>
         </placeholder>
